# routes/api.php
@@ -6,3 +6,4 @@ use Illuminate\Support\Facades\Route;
 
 Route::post('/bookings', [BookingController::class, 'store']);
 Route::get('/hotels/popular', [HotelController::class, 'index']);
+Route::post('/bookings/hold', [BookingController::class, 'hold']);
